--- a/src/component/layout/layout.scss
+++ b/src/component/layout/layout.scss
@@ -164,3 +164,20 @@ p {
 //     }
 
 // }
+.fs-12{
+    font-size: 12px;
+}
+
+.short_image{
+    width: 100px;
+    height: 140px;
+}
+
+.category {
+    .short_image {
+        background: beige;
+        width: 140px;
+       height: 140px;
+        border-radius: 50%;
+    }
+}
