--- a/src/component/layout/layout.scss
+++ b/src/component/layout/layout.scss
@@ -181,3 +181,9 @@ p {
         border-radius: 50%;
     }
 }
+
+.dashboard-card {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1rem;
+}
